timer/style.css
header button {
  padding: 10px 20px;
  font-size: 16px;
  border-radius: 5px;
  border: none;
  background-color: #f44336;
  color: #fff;
  cursor: pointer;
  transition: background-color 0.3s ease-in-out;
}

header button:hover {
  background-color: #c41b18;
}

body {
  background-color: #121212;
  color: #fff;
  font-family: sans-serif;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

.container {
  height: 65vh;
  max-width: 90vw;
  margin: 0 auto;
  padding: 20px;
  margin-top: 10vh;
  margin-bottom: 10vh;
  background-color: #2c2c2c;
  border-radius: 5px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
}

h2 {
  font-size: 24px;
  margin-bottom: 10px;
}

p {
  margin-bottom: 20px;
}

.timer-app {
  background-color: #2c2c2c;
  color: #fff;
  border-radius: 5px;
  padding: 20px;
  max-width: 300px;
  margin: 0 auto;
  text-align: center;
}

.time-selector {
  display: flex;
  justify-content: space-around;
  margin-bottom: 20px;
}

.time-section {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.time-section label {
  font-size: 14px;
  margin-bottom: 5px;
}

.time-section input {
  font-size: 18px;
  padding: 5px;
  width: 60px;
  text-align: center;
}

.timer-controls {
  display: flex;
  justify-content: space-around;
}

.timer-controls button {
  padding: 10px 20px;
  font-size: 16px;
  background-color: #f44336;
  color: #fff;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

.timer-controls button:hover {
  background-color: #c41b18;
}

#timeDisplay {
  font-size: 24px;
  margin-top: 20px;
}

